overflow-x mobile fix (test2)

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -11,6 +11,8 @@
     padding-inline: 30px;
     color: var(--mui-palette-text-primary);
     background-color: var(--mui-palette-primary-main);
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 .NavIcons {
     display: flex;
