--- a/src/styles/Hero.module.scss
+++ b/src/styles/Hero.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 60px);
+  overflow-x: hidden;
+  max-width: 100vw;
   & > * {
     flex: 1;
   }
