--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 html{
   scrollbar-width: none;
   overflow-x: hidden;
-  width: 100vw;
+  max-width: 100vw;
 }
 input,
 textarea,
